k8s/apps/elk-nhackindustries/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk-nhackindustries
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http01-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - elk.nhackindustries.com
    - elasticsearch.elk.nhackindustries.com
    secretName: elk-nhackindustries-com-tls
  rules:
  - host: elk.nhackindustries.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-kb-http
            port:
              name: https
  - host: elasticsearch.elk.nhackindustries.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-es-http
            port:
              name: https
